# pulp-inspector

./: .containerignore  .gitignore  Containerfile  Makefile  Procfile  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  container.yml
src/pulp_inspector/: __init__.py  __main__.py  app.py  pulp.py  pypi.py  session.py  spa.py  wheels.py
src/pulp_inspector/api/: router.py
src/pulp_inspector/api/endpoints/: cache.py  health.py  indexes.py
src/pulp_inspector/api/schemas/: cache.py  health.py  indexes.py
tests/: __init__.py  conftest.py
tests/api/: test_health.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  AppLayout.tsx  main.tsx  theme.css
ui/src/pages/: IndexesPage.tsx  PackagePage.tsx  PackagesPage.tsx  WheelFilePage.tsx  WheelPage.tsx
